--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mocha-graphql-register",
-  "version": "1.0.0",
-  "description": "Loads content of a .graphql file during npm test",
+  "version": "1.1.0",
+  "description": "Loads content of a .graphql and .gql files during npm test",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha \"./test/**/*.spec.js*\""
